--- a/Project_Plagiarism_Detection/2_Plagiarism_Feature_Engineering.ipynb
+++ b/Project_Plagiarism_Detection/2_Plagiarism_Feature_Engineering.ipynb
@@ -2262,8 +2262,7 @@
     "        os.makedirs(data_dir)\n",
     "    \n",
     "    # first column is the labels and rest is features \n",
-    "    pd.concat([pd.DataFrame(y), pd.DataFrame(x)], axis=1)\\\n",
-    "             .to_csv(os.path.join(data_dir, filename), header=False, index=False)\n",
+    "    pd.concat([pd.DataFrame(y), pd.DataFrame(x)], axis=1).dropna().to_csv(os.path.join(data_dir, filename), header=False, index=False)\n",
     "        \n",
     "    # nothing is returned, but a print statement indicates that the function has run\n",
     "    print('Path created: '+str(data_dir)+'/'+str(filename))"
